new version upgrade

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ sass:
   style: expanded
 # Site settings
 title: "@tkssharma"
-tagline: "Learn Code in Javascript"
-description: "The website from Tarun Sharma, helping improve lives by teaching front-end web skills with a clear, practical style. I am Publisher, Trainer Developer, working on Enterprise and open source Technologies JavaScript frameworks (React Angular 2.x), I work with client side and server side javascript programming which includes node js or any other frameworks Currently working with JavaScript framework React & Node js 🚀 with Graphql "
+tagline: "Learn Code in Javascript | @tkssharma"
+description: "The website from Tarun Sharma, helping improve lives by teaching front-end web skills with a clear, practical style."
 email: tarun.softengg@gmail.com
 twitteruser: "@tkssaharma"
 logo: "/assets/images/powship.png" #blog logo
