--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author_image: "/assets/images/author.jpg"
 ldcjsonfeed: http://planetoftheweb.com/i/courses.php?author=832401&limit=0&filter.includes=Title,ShortDescription,DurationInSeconds,URLs,ID,WelcomeVideoId,Thumbnails.filename
 paginate:	20
 
-url: "http://kumartarun.github.io" # the base hostname & protocol for your site
+url: "http://blog.tkssharma.com" # the base hostname & protocol for your site
 
 # social icons and sharing options
 social:
