--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^3.10.0",
+    "gatsby-plugin-advanced-sitemap": "^2.0.0",
+    "gatsby-plugin-sitemap": "^2.2.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^3.0.0",
     "gatsby-plugin-local-search": "^2.0.0",
