--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "tkssharma.com",
+  "name": "blogs.tkssharma.com",
   "private": true,
   "version": "3.0.0",
   "description": "Personal website running on Gatsby, React, and Node.js.",
   "author": "tkssharma",
   "license": "MIT",
+  "engines": {
+    "node": "14.x || 16.x || 18.x",
+    "npm": ">=6.9.x"
+  },
+  "devEngines": {
+    "node": "14.x || 16.x || 18.x",
+    "npm": ">=6.9.x"
+  },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -13,34 +21,46 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.10.0",
-    "gatsby-plugin-advanced-sitemap": "^2.0.0",
-    "gatsby-plugin-sitemap": "^2.2.1",
+    "gatsby": "^5.8.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-feed": "^3.0.0",
-    "gatsby-plugin-local-search": "^2.0.0",
-    "gatsby-plugin-netlify": "^3.0.1",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.1",
-    "gatsby-remark-autolink-headers": "^3.0.0",
-    "gatsby-remark-images": "^4.0.0",
-    "gatsby-remark-prismjs": "^4.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "http-server": "^0.12.3",
-    "prismjs": "^1.23.0",
-    "query-string": "^6.14.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-use-flexsearch": "^0.1.1"
+    "gatsby-plugin-catch-links": "^5.8.0",
+    "gatsby-plugin-feed": "^5.10.0",
+    "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-local-search": "^2.0.1",
+    "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-nprogress": "^5.8.0",
+    "gatsby-plugin-offline": "^6.8.0",
+    "gatsby-plugin-react-helmet": "^6.8.0",
+    "gatsby-plugin-sass": "^6.8.0",
+    "gatsby-plugin-sharp": "^5.8.1",
+    "gatsby-plugin-sitemap": "^6.8.0",
+    "gatsby-remark-autolink-headers": "^6.8.0",
+    "gatsby-remark-copy-linked-files": "^6.8.0",
+    "gatsby-remark-images": "^7.8.0",
+    "gatsby-remark-prismjs": "^7.8.0",
+    "gatsby-remark-responsive-iframe": "^6.8.0",
+    "gatsby-source-filesystem": "^5.8.0",
+    "gatsby-transformer-remark": "^6.8.0",
+    "gatsby-transformer-sharp": "^5.8.0",
+    "lodash": "^4.17.13",
+    "lodash.kebabcase": "^4.1.1",
+    "prismjs": "^1.24.1",
+    "query-string": "^7.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-github-btn": "^1.1.1",
+    "react-helmet": "^5.2.0",
+    "react-slick": "^0.29.0",
+    "react-use-flexsearch": "^0.1.1",
+    "sass": "^1.60.0",
+    "sharp": "^0.31.2",
+    "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
+    "eslint": "^7.32.0",
     "eslint-config-react-app": "^6.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "postcss": "^8.2.8"
+    "postcss": "^8.3.6"
   },
   "repository": {
     "type": "git",
